k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website
spec:
  selector:
    app: portfolio-website
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
